trunk/Archive2/db/997e7302c268c8/output
main.cpp:8:44: error: new declaration 'void random()'
 void legenda(),visualizza(),input(),random(),controllo_a(),controllo_b();
                                            ^
In file included from /usr/include/c++/4.8/cstdlib:72:0,
                 from main.cpp:1:
/usr/include/stdlib.h:327:17: error: ambiguates old declaration 'long int random()'
 extern long int random (void) __THROW;
                 ^
main.cpp: In function 'void random()':
main.cpp:82:13: error: new declaration 'void random()'
 void random()       //decisione cpu intelligente
             ^
In file included from /usr/include/c++/4.8/cstdlib:72:0,
                 from main.cpp:1:
/usr/include/stdlib.h:327:17: error: ambiguates old declaration 'long int random()'
 extern long int random (void) __THROW;
                 ^
